src/test/resources/wacc_examples/valid/imports/importFiles/foo.wacc
begin
    int foo(int x) is
        return x
    end
    skip
end