src/test/resources/wacc_examples/invalid/semanticErr/imports/importFiles/fileWithFooFunction.wacc
begin
	int foo() is
		return 0
	end
	skip
end